<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    tools:context=".onboarding.OnboardingOneActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

<!--    <Spinner-->
<!--        android:id="@+id/spinner_layanan"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@drawable/bg_spinner"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:entries="@array/layanan"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextNoTlp" />-->


    <Spinner
        android:id="@+id/spinner_layanan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/layanan"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNoTlp"
        android:background="@drawable/bg_spinner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_nama"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextalamat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_alamat"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextNoTlp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/no_tlp"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextalamat"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_telepon"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/no_tlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/editTextTextHarga"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/harga"-->
<!--        android:inputType="none"-->
<!--        android:shadowColor="@color/white"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/grey"-->
<!--        app:boxBackgroundColor="@color/white"-->
<!--        app:boxCornerRadiusBottomEnd="8dp"-->
<!--        app:boxCornerRadiusBottomStart="8dp"-->
<!--        app:boxCornerRadiusTopEnd="8dp"-->
<!--        app:boxCornerRadiusTopStart="8dp"-->
<!--        app:boxStrokeColor="@color/white"-->
<!--        app:hintTextColor="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spinner_layanan"-->
<!--        app:startIconCheckable="false"-->
<!--        app:startIconDrawable="@drawable/ic_harga"-->
<!--        app:startIconTint="@color/black"-->
<!--        app:suffixTextColor="@color/white">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/harga"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextTglPesan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/tgl_pesan"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_layanan"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tgl_pesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextTglPelaksanaan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/tgl_pelaksanaan"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTglPesan"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24"
        app:startIconTint="@color/black"
        app:suffixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tgl_pelaksanaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle_white"
        android:backgroundTint="@color/colorOrange"
        android:text="Selanjutnya"
        app:backgroundTint="@color/colorOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTglPelaksanaan" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="226dp"
        android:layout_height="107dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logokula" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_layanan"
        app:layout_constraintEnd_toEndOf="@+id/spinner_layanan"
        app:layout_constraintTop_toTopOf="@+id/spinner_layanan"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_down" />

</androidx.constraintlayout.widget.ConstraintLayout>